# offset

./: .gitignore  CMakeLists.txt  config.cmake
.github/workflows/: debug_test.yml  format_check.yml  release_test.yml  test.yml
.ind_build/benchs/: CMakeLists.txt
.ind_build/cmake/: config.cmake.in  cpack.cmake  frame_utils.cmake  module.pc.in  pc.in  version.rc.in
.ind_build/docs/: Doxyfile
.ind_build/scripts/: format.py  format_check.py  requirements.txt
.ind_build/tests/: CMakeLists.txt  main.cpp
benchs/: template1_bench.cpp  template_simple_api_bench.cpp  template_simple_api_bench.cxx
demo/: ACIS_Win.rc  CMakeLists.txt  RCb11660  RCc11660  RCc46560  Resource.h  bool_examples.cpp  intcur.cpp  intcur.h  ofst_examples1.cpp  ofst_examples1.hxx  template_examples.cpp  template_examples.hxx  test.cpp  test.h  which_ACIS.cpp
include/api_extend/: gme_cstrapi.hxx
include/offsetting/: template_edge_count_args.hxx  template_simple_api.hxx
include/offsetting/PrivateInterfaces/: apiFinder.hxx  off_trim.hxx  ofst_bad_intersections_remover.hxx  ofst_edge_smooth_manager.hxx  ofst_husk_thread_ctx.hxx  ofst_intersection_containment_remover.hxx  ofst_jour.hxx  ofst_natural_extender.hxx  ofst_trim_util.hxx
include/offsetting/ProtectedInterfaces/: at_rel.hxx  off_cu.hxx  offsetsf.hxx  ofst_api_prot.hxx  ofstopts.hxx  ofsttools.hxx  protlist.hxx  sgoffrtn_prot.hxx
include/offsetting/PublicInterfaces/: gme_cur_off_anno.hxx  gme_dcl_ofst.h  gme_ofstapi.hxx  gme_sgcofrtn.hxx  gme_sgoffrtn.hxx  off_misc.hxx
include/offsetting/acis/: acis.hxx  cstrapi.hxx  cucuint.hxx  curdef.hxx  edge.hxx  interval.hxx  lists.hxx  mmgr.hxx  param.hxx  strdef.hxx  wire_utl.hxx
include/runtime_method/: edge_count_args.hxx
include/template/: edge_count_args.hxx  gme_cstrapi.hxx  template1.hxx  template_edge_count_args.hxx  template_gme_cstrapi.hxx  template_simple_api.hxx  template_strdef.hxx
include/template/acis/: api.err  errorbase.hxx  lists.hxx  position.hxx  transf.hxx
src/: edge_count_args.cxx  gme_cstrapi.cxx  template1.cpp  template_edge_count_args.cpp  template_edge_count_args.cxx  template_gme_cstrapi.cpp  template_gme_cstrapi.cxx  template_simple_api.cpp  template_simple_api.cxx  template_strdef.cpp  template_strdef.cxx
src/address/: apiFinder.cpp
src/kern/: protlist.cpp
src/offset/: ofst_husk_thread_ctx.cpp
src/offset_sg_husk_api/: off_face.cpp  ofst_jour.cpp  w_offset.cpp  wboffset.cpp  woffsetl.cpp
src/offset_sg_husk_cur_off/: at_rel.cpp  cur_off_anno.cpp  off_misc.cpp  ofst_bad_intersections_remover.cpp  ofst_edge_smooth_manager.cpp  ofst_intersection_containment_remover.cpp  ofst_natural_extender.cpp  ofst_trim_util.cpp  ofst_wires_extractor.cpp  ofwire.cpp  trmofwi.cpp
src/offset_sg_husk_offset/: offfa.cpp  offsetsf.cpp  ofsterr.cpp
src/offset_sg_husk_offsur/: ofsurcur.cpp
tests/: api_extend_test.cpp  runtime_virtual_method_test.cpp  template1_test.cpp  template_gme_cstrapi.cpp  template_gme_cstrapi.cxx  template_gme_ofstwire.cpp  template_runtime_virtual_method_test.cpp  template_runtime_virtual_method_test.cxx  template_simple_api_test.cpp  template_simple_api_test.cxx  template_strdef_test.cpp  template_strdef_test.cxx
